@@ -2,6 +2,7 @@ import colorama
 from colorama import Fore, Back, Style
 colorama.init()
 
+
 def check_coins(game_map, player):
     x = player.pos_x
     y = player.pos_y
@@ -26,20 +27,20 @@ def check_coins(game_map, player):
 
 def check_flames(game_map, player):
     for val in game_map.flames:
+        if val.active == 0:
+            continue
         x = player.pos_x
         y = player.pos_y
-        h = val['height']
-        fx = val['x']
-        fy = val['y']
-        ang = val['angle']
+        h = val.height
+        fx = val.pos_x
+        fy = val.pos_y
+        ang = val.angle
         if ang == 0:
             # check condition
             if fy <= y and fy >= y - player.height + 1:
                 if (fx >= x and fx <= x + player.width - 1) or (fx <= x and fx + h - 1 >= x + player.width - 1) or (x <= fx + h - 1 and fx + h - 1 <= x + player.width - 1):
                     player.lives -= 1
-                    val['x'] = -1
-                    val['y'] = -1
-                    val['angle'] = 10
+                    val.active = 0
                     for ind in range(h):
                         game_map.grid[fy][fx+ind] = Back.BLACK + \
                             Fore.BLACK + ' '
@@ -48,9 +49,7 @@ def check_flames(game_map, player):
             if fx >= x and fx <= x + player.width - 1:
                 if (y >= fy and y - player.height + 1 <= fy) or (y <= fy and y - player.height + 1 >= fy - h + 1) or (y >= fy - h + 1 and y - player.height + 1 <= fy - h + 1):
                     player.lives -= 1
-                    val['x'] = -1
-                    val['y'] = -1
-                    val['angle'] = 10
+                    val.active = 0
                     for ind in range(h):
                         game_map.grid[fy-ind][fx] = Back.BLACK + \
                             Fore.BLACK + ' '
@@ -67,9 +66,67 @@ def check_flames(game_map, player):
                 fy -= 1
             if flag == 1:
                 player.lives -= 1
-                val['x'] = -1
-                val['y'] = -1
-                val['angle'] = 10
+                val.active = 0
                 for ind in range(h):
                     game_map.grid[oy-ind][ox+ind] = Back.BLACK + \
                         Fore.BLACK + ' '
+
+
+def check_flames_bullets(bullets, game_map):
+    for blt in bullets:
+        if blt.active == 0:
+            continue
+        left_x = blt.pos_x
+        right_x = blt.pos_x + blt.width - 1
+        bottom_y = blt.pos_y
+        top_y = blt.pos_y - blt.height + 1
+
+        for flm in game_map.flames:
+            if flm.active == 0:
+                continue
+
+            fleft_x = flm.pos_x
+            fright_x = flm.pos_x + flm.width - 1
+            fbottom_y = flm.pos_y
+            ftop_y = flm.pos_y - flm.height + 1
+            ang = flm.angle
+
+            if ang == 0:
+                if fbottom_y <= bottom_y and fbottom_y >= top_y:
+                    if (left_x <= fleft_x and right_x >= fleft_x) or (left_x >= fleft_x and right_x <= fright_x) or (left_x <= fright_x and right_x >= fright_x):
+                        flm.active = 0
+                        # blt.active = 0
+                        for ind in range(flm.height):
+                            game_map.grid[fbottom_y][fleft_x + ind] = Back.BLACK + \
+                                Fore.BLACK + ' '
+
+            elif ang == 1:
+                if fleft_x >= left_x and fright_x <= right_x:
+                    if (bottom_y >= fbottom_y and top_y <= fbottom_y) or (bottom_y <= fbottom_y and top_y >= ftop_y) or (bottom_y >= ftop_y and top_y <= ftop_y):
+                        flm.active = 0
+                        # blt.active = 0
+                        for ind in range(flm.height):
+                            game_map.grid[fbottom_y - ind][fleft_x] = Back.BLACK + \
+                                Fore.BLACK + ' '
+
+            elif ang == 2:
+                flag = 0
+                oy = fbottom_y
+                ox = fleft_x
+                for i in range(flm.height):
+                    if (ox >= left_x and ox <= right_x and oy <= bottom_y and oy >= top_y):
+                        flag = 1
+                        break
+                    ox += 1
+                    oy -= 1
+
+                if flag == 1:
+                    flm.active = 0
+                    # blt.active = 0
+                    for ind in range(flm.height):
+                        game_map.grid[fbottom_y-ind][fleft_x+ind] = Back.BLACK + \
+                        Fore.BLACK + ' '
+
+             
+             
+
