@@ -3,6 +3,7 @@ from colorama import Fore, Back, Style
 from scenery import scenery
 from input import input
 from character import Person
+from objects import shoot
 import termios
 from check import *
 import subprocess as sp
@@ -31,24 +32,35 @@ if __name__ == "__main__":
         player.lives) + "       TIME LEFT= " + str(player.time)
     game_map = scenery(player, rows, columns, frames)
     start_time = time.time()
+    bullets = []
 
     while(1):
         if input.kbhit():
             val = input.getch()
             if(val == 'q' or val == 'Q'):
                 break
-            player.change_vel(val)
+            if val == ' ':
+                bullet = shoot(player.pos_x + player.width,
+                               player.pos_y - player.height + 1, world_x + offset - 1)
+                bullets.append(bullet)
+            else:
+                player.change_vel(val)
         else:
             pass
-            # use gravity when nothing is pressed
-            # player.gravity()
 
-        # player.gravity += player.dy
+        for val in bullets:
+            if val.pos_x > val.limit:
+                val.active = 0
+            if val.active == 1:
+                game_map.object(val)
+
         player.vely += player.gravity
         player.change_pos()
         player.check(world_x, world_y, offset)
         # check_coins should be before game_map.object as in check_coins we are checking if at positions there is some coin but in game_map we
         # are rewriting that position with player
+
+        check_flames_bullets(bullets, game_map)
         check_flames(game_map, player)
         check_coins(game_map, player)
         game_map.object(player)
@@ -68,7 +80,13 @@ if __name__ == "__main__":
                     output_str += game_map.grid[row][offset + col]
             output_str += '\n'
 
+        # bring cursor to start instead of clearing the full screen
         print('\033[H' + output_str)
+
+        for val in bullets:
+            if val.active == 1:
+                game_map.clear(val)
+                val.pos_x += 2
         game_map.clear(player)
         tm = time.time()
         diff = tm - start_time
@@ -77,11 +95,12 @@ if __name__ == "__main__":
             # done so that with screen moving back player's position should remain same
             player.velx += 1
             player.change_pos()
+            for val in bullets:
+                if val.active == 1:
+                    val.pos_x += 1
             start_time = tm
 
-        # bring cursor to start instead of clearing the full screen
         player.velx = 0
-        # player.vely = 0
         sys.stdin.flush()
         sys.stdout.flush()
         time.sleep(0.02)
