@@ -10,3 +10,5 @@
 10. make new file for all colors
 11. check condition of removing flames
 12. gravity
+13. bullet is removing coins and flames
+14. bullet should get removed after removing one flame
